chore(ServerPingListener): use getFirst() for improved readability when accessing motd